Fix that the scrollbar is not always displayed

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -98,7 +98,8 @@
   > .content-center {
     width: 100%;
     flex: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
   
   > .content-bottom {
